--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,6 +1,4 @@
 .sideBarDiv {
-  position: fixed;
-  min-height: 100%;
   width: 241px;
   background-color: black;
 }
